--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "author": "Jaejuna <anayana9988@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@babel/cli": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/node": "^7.14.7",
+    "@babel/preset-env": "^7.14.7",
     "graphql-yoga": "^1.18.3"
   },
   "scripts": {
